--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Projeto Agrinho João Gabriel</title>
+    <title>JARDIM VERDE</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
@@ -14,17 +14,18 @@
 <body>
     <section class="principal container">
         <div class="container__caixa">
-            <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço
-                único.</h1>
-            <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua" class="container__imagem">
-            <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
-            <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
+            <h1 class="container__titulo"> 
+              AS MELHORES PLANTAS DO VALE PARA SEU JARDIM 
+                </h1>
+            <img src="PLANTA1.png" alt="O combo+ é a junção do alura+ e o alura língua" class="container__imagem">
+            <a href="www.alura.com.br" class="container__botao">PLANTAS NATURAIS</a>
+            <a href="www.alura.com.br" class="container__botao botao_secundario">PLANTAS ARTIFICIAIS</a>
             <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
         </div>
     </section>
 
     <section class="container secundario">
-        <img src="img/Plataformas.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
+        <img src="SUCULENTA.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
         <div class="container__descricao">
             <h2 class="descricao__titulo">Assista do seu jeito</h2>
             <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros
@@ -40,32 +41,32 @@
             </p>
             <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
         </div>
-        <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
+        <img src="cactos.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
     </section>
 
     <section class="container secundario">
-        <img src="img/Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
+        <img src="samam.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
             class="secundario__imagem">
         <div class="container__descricao">
-            <h2 class="descricao__titulo">Baixe seus cursos</h2>
-            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com
-                você, até mesmo sem internet.</p>
+            <h2 class="descricao__titulo">O QUE É A PLANTA SAMAMBAIA?</h2>
+            <p class="descricao__texto">Pteridófitas são plantas vasculares sem sementes, conhecidas como samambaias e avencas. Caracterizam-se por terem ciclos de vida com alternância de gerações, reproduzindo-se por esporos. Exemplos incluem a samambaia-comum (Pteridium aquilinum) e a avenca (Adiantum).
+                </p>
         </div>
     </section>
     
     <section class="dispositivos">
-        <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+        <h2 class="dispositivos__titulo">DIVERSAS ESPECIES DISPONIVEIS</h2>
         <ul class="dispositivos__lista">
             <li>
-                <img src="img/tv.png" alt="Ícone de televisão">
-                <h3 class="lista__item">TV</h3>
+                <img src="suculentas3.png" alt="Ícone de televisão">
+                <h3 class="lista__item">SUCULENTAS</h3>
             </li>
             <li>
-                <img src="img/computador.png" alt="Ícone de computador">
+                <img src="cactos2.png" alt="Ícone de computador">
                 <h3 class="lista__item">Computador</h3>
             </li>
             <li>
-                <img src="img/celular.png" alt="Ícone de celular">
+                <img src="samambaias2.png" alt="Ícone de celular">
                 <h3 class="lista__item">Celular</h3>
             </li>
         </ul>
@@ -96,11 +97,11 @@
                 <a href="#">Ajuda</a>
             </li>
         </ul>
-        <p class="rodape__texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de
-            assinatura paga. Conteúdo sujeito a disponibilidade.</p>
-        <p class="rodape__texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O
-            serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São
-            Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+        <p class="rodape__texto">® 
+            As plantas ornamentais para jardim são a alma e o coração de qualquer área externa, agregando vida e identidade aos espaços.</p>
+        <p class="rodape__texto">
+            Não são apenas elementos decorativos; elas trazem vida, cores vibrantes e uma atmosfera de tranquilidade para espaços ao ar livre
+            </p>
     </footer>
 </body>
 
