--- a/index.html
+++ b/index.html
@@ -27,19 +27,18 @@
     <section class="container secundario">
         <img src="SUCULENTA.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
         <div class="container__descricao">
-            <h2 class="descricao__titulo">Assista do seu jeito</h2>
-            <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros
-                aparelhos. Nossa seleção de cursos não para de crescer.</p>
+            <h2 class="descricao__titulo">OQUE REPRESENTA UMA SUCULENTA</h2>
+            <p class="descricao__texto">Sabe-se que as suculentas simbolizam amor duradouro e intemporal, na cultura asiática elas representam prosperidade, algumas espécies como as plantas de jade são frequentemente chamadas de planta do dinheiro. As plantas de jade são também um presente comercial tradicional que simboliza votos de sucesso.</p>
         </div>
     </section>
 
     <section class="container secundario">
         <div class="container__descricao">
             <p class="descricao__texto">
-                Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da
-                tecnologia e aprender inglês ou espanhol, onde e como quiser.
+                Algumas espécies de cactos podem viver centenas de anos e crescer apenas alguns centímetros por ano, pelo que passaram a ser associados à paciência e à resistência. Em algumas culturas indígenas das Américas, os cactos têm também um significado espiritual e são utilizados em cerimónias religiosas e rituais sagrados
+                
             </p>
-            <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
+            <a href="www.alura.com.br" class="" container></a>
         </div>
         <img src="cactos.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
     </section>
@@ -63,38 +62,38 @@
             </li>
             <li>
                 <img src="cactos2.png" alt="Ícone de computador">
-                <h3 class="lista__item">Computador</h3>
+                <h3 class="lista__item">CACTOS</h3>
             </li>
             <li>
                 <img src="samambaias2.png" alt="Ícone de celular">
-                <h3 class="lista__item">Celular</h3>
+                <h3 class="lista__item">SAMAMBAIS</h3>
             </li>
         </ul>
     </section>
 
     <footer class="rodape">
-        <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
+        <img src="img/Logo.png" alt="INFORMAÇOẼS" class="rodape__logo">
         <ul class="rodape__lista">
             <li class="lista__link">
-                <a href="#">Idioma</a>
+                <a href="#"></a>
             </li>
             <li class="lista__link">
-                <a href="#">Dispositivos compatíveis</a>
+                <a href="#"></a>
             </li>
             <li class="lista__link">
-                <a href="#">Contrato de assinatura</a>
+                <a href="#"></a>
             </li>
             <li class="lista__link">
-                <a href="#">Politica de privacidade</a>
+                <a href="#"></a>
             </li>
             <li class="lista__link">
-                <a href="#">Proteção de dados no Brasil</a>
+                <a href="#"></a>
             </li>
             <li class="lista__link">
-                <a href="#">Anuncios personalizados</a>
+                <a href="#"></a>
             </li>
             <li class="lista__link">
-                <a href="#">Ajuda</a>
+                <a href="#"></a>
             </li>
         </ul>
         <p class="rodape__texto">® 
